test/fail/basic_syntax/missing_return.lily
#[
SyntaxError: Missing return statement at end of function.
    from missing_return.lily:6:
]#

define f : Integer {  }
